[gd_scene load_steps=27 format=3 uid="uid://cf4l6g0krsom"]

[ext_resource type="Script" uid="uid://tf2kj7r3j1xo" path="res://ui/tabs/tab_blueprints/tab_blueprints.gd" id="1_rfbpj"]
[ext_resource type="PackedScene" uid="uid://bdnh40tn0t5yx" path="res://ui/fried_convex_panel/fried_convex_panel.tscn" id="2_fhnj6"]
[ext_resource type="Texture2D" uid="uid://bj4xmtdtphxee" path="res://resources/icons/plus_icon.png" id="2_idk65"]
[ext_resource type="Texture2D" uid="uid://b1e1eujkhkv8p" path="res://resources/icons/sun_icon.png" id="3_gjuor"]
[ext_resource type="Texture2D" uid="uid://dmrbm7aisgikx" path="res://resources/icons/directory_new_icon.png" id="4_04mv5"]
[ext_resource type="PackedScene" uid="uid://b6o13q7qteh2i" path="res://ui/tabs/tab_elements/draggable_tree/draggable_tree.tscn" id="4_6nt0s"]
[ext_resource type="Texture2D" uid="uid://o0w65dsng3rt" path="res://resources/icons/entities_white_icon.png" id="4_p84r7"]
[ext_resource type="Texture2D" uid="uid://efd2bft5skkj" path="res://resources/icons/prop_icon.png" id="5_t506c"]
[ext_resource type="Texture2D" uid="uid://noi6i8fmrepx" path="res://resources/icons/open_folder_icon.png" id="6_b6beg"]
[ext_resource type="PackedScene" uid="uid://gy2c5q5o665" path="res://ui/fried_button/fried_button_yellow.tscn" id="8_3if6w"]
[ext_resource type="PackedScene" uid="uid://b3d83roncqixw" path="res://ui/fried_button/fried_button_blue.tscn" id="9_gftnf"]
[ext_resource type="Texture2D" uid="uid://bs1udfpmwy6a" path="res://resources/icons/filter_icon.png" id="10_2udc6"]
[ext_resource type="Texture2D" uid="uid://1b7cvgs3dip3" path="res://resources/icons/copy_icon.png" id="10_5ctao"]
[ext_resource type="Texture2D" uid="uid://mdaepaknysud" path="res://resources/icons/link_icon.png" id="12_qk0v6"]
[ext_resource type="Texture2D" uid="uid://cmjv1nfv6da8u" path="res://resources/icons/unlink_icon.png" id="13_2emv7"]
[ext_resource type="Texture2D" uid="uid://cm6jd7qae4jb2" path="res://resources/icons/edit_icon.png" id="13_oapwh"]
[ext_resource type="Texture2D" uid="uid://cd12rsmlptjoc" path="res://resources/icons/trash_icon.png" id="15_aasks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t4urb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eiu2l"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.184416, 0.32211, 0.305106, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.277821, 0.459445, 0.438482, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a2hx"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.184416, 0.32211, 0.305106, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.277821, 0.459445, 0.438482, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbu81"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.145922, 0.262909, 0.248497, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.210106, 0.362414, 0.342017, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iffdj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lfy0"]
bg_color = Color(0.0156863, 0.0156863, 0.0156863, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lp3ci"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.511329, 0.245046, 0.236259, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.641389, 0.323196, 0.311678, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsat4"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.380495, 0.173065, 0.166535, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.506082, 0.242074, 0.233384, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5rhsv"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0

[node name="TabBlueprints" type="PanelContainer"]
offset_right = 306.0
offset_bottom = 393.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_t4urb")
script = ExtResource("1_rfbpj")
metadata/_tab_index = 1

[node name="C" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="C2" parent="C" instance=ExtResource("2_fhnj6")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="C/C2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NewButton" type="MenuButton" parent="C/C2/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Create new Blueprint"
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_eiu2l")
theme_override_styles/hover = SubResource("StyleBoxFlat_1a2hx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vbu81")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iffdj")
icon = ExtResource("2_idk65")
flat = false
icon_alignment = 1
item_count = 4
popup/item_0/text = "New Folder"
popup/item_0/icon = ExtResource("4_04mv5")
popup/item_0/id = 0
popup/item_1/text = "New light"
popup/item_1/icon = ExtResource("3_gjuor")
popup/item_1/id = 1
popup/item_2/text = "New Entity"
popup/item_2/icon = ExtResource("4_p84r7")
popup/item_2/id = 2
popup/item_3/text = "New Prop"
popup/item_3/icon = ExtResource("5_t506c")
popup/item_3/id = 3

[node name="FolderButton" parent="C/C2/H" instance=ExtResource("8_3if6w")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 1
tooltip_text = "Open Blueprints folder"
icon = ExtResource("6_b6beg")

[node name="LabelLineEdit" type="LineEdit" parent="C/C2/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Label..."
clear_button_enabled = true
right_icon = ExtResource("10_2udc6")

[node name="ScanButton" parent="C/C2/H" instance=ExtResource("9_gftnf")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 1
tooltip_text = "Scan Blueprints folder"

[node name="C" type="PanelContainer" parent="C"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7lfy0")

[node name="C" type="VBoxContainer" parent="C/C"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DraggableTree" parent="C/C/C" instance=ExtResource("4_6nt0s")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 1
hide_root = false
select_mode = 2
allow_drag = true
drag_type = "campaign_blueprint_items"
allow_drop_on_item = true
allow_drop_inbetween = true

[node name="MarginContainer" type="MarginContainer" parent="C/C/C"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="FriedConvexPanel" parent="C/C/C/MarginContainer" instance=ExtResource("2_fhnj6")]
layout_mode = 2

[node name="C" type="HBoxContainer" parent="C/C/C/MarginContainer/FriedConvexPanel"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_constants/separation = 0

[node name="InstanceButton" type="Button" parent="C/C/C/MarginContainer/FriedConvexPanel/C"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Instance selected Blueprint"
focus_mode = 0
icon = ExtResource("12_qk0v6")
icon_alignment = 1

[node name="InstanceDetachedButton" type="Button" parent="C/C/C/MarginContainer/FriedConvexPanel/C"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Instance selected Blueprint"
focus_mode = 0
icon = ExtResource("13_2emv7")
icon_alignment = 1

[node name="EditButton" type="Button" parent="C/C/C/MarginContainer/FriedConvexPanel/C"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Instance selected Blueprint"
focus_mode = 0
icon = ExtResource("13_oapwh")
icon_alignment = 1

[node name="DuplicateButton" type="Button" parent="C/C/C/MarginContainer/FriedConvexPanel/C"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Duplicate selected Blueprint"
focus_mode = 0
icon = ExtResource("10_5ctao")
icon_alignment = 1

[node name="RemoveButton" type="Button" parent="C/C/C/MarginContainer/FriedConvexPanel/C"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Remove selected Blueprint"
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_lp3ci")
theme_override_styles/hover = SubResource("StyleBoxFlat_lp3ci")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bsat4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5rhsv")
icon = ExtResource("15_aasks")
icon_alignment = 1
